[gd_scene load_steps=12 format=2]

[ext_resource path="res://GUI/Main_menu.gd" type="Script" id=1]
[ext_resource path="res://GUI/fon.png" type="Texture" id=2]
[ext_resource path="res://GUI/Wooden Pixel Art GUI 32x32.png" type="Texture" id=3]
[ext_resource path="res://Data/dogica.ttf" type="DynamicFontData" id=4]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 417.766, 1025.33, 92.5288, 30.7144 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 417.718, 1088.91, 92.6573, 31.3569 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 417.746, 1055.89, 92.5288, 32.3851 )

[sub_resource type="DynamicFont" id=4]
size = 40
outline_size = 2
outline_color = Color( 0.137255, 0.145098, 0.164706, 1 )
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 706.007, 1025.41, 92.2878, 30.7185 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 705.818, 1088.87, 92.3935, 31.2487 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 705.814, 1055.97, 92.3406, 32.3954 )

[node name="Main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Exit_btn" type="TextureButton" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -247.0
margin_top = 119.0
margin_right = 247.0
margin_bottom = 223.0
texture_normal = SubResource( 9 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 10 )
expand = true

[node name="Label" type="Label" parent="Background/Exit_btn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -18.0
margin_right = 80.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.32549, 0.313726, 0.356863, 1 )
custom_fonts/font = SubResource( 4 )
text = "Exit"

[node name="Start_btn" type="TextureButton" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -247.0
margin_top = -222.0
margin_right = 247.0
margin_bottom = -118.0
texture_normal = SubResource( 5 )
texture_pressed = SubResource( 6 )
texture_hover = SubResource( 7 )
expand = true

[node name="Label" type="Label" parent="Background/Start_btn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -18.0
margin_right = 100.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.380392, 0.368627, 0.423529, 1 )
custom_fonts/font = SubResource( 4 )
text = "Start"

[node name="Author_btn" type="TextureButton" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -247.0
margin_top = -52.0
margin_right = 247.0
margin_bottom = 52.0
texture_normal = SubResource( 5 )
texture_pressed = SubResource( 6 )
texture_hover = SubResource( 7 )
expand = true

[node name="Label" type="Label" parent="Background/Author_btn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -18.0
margin_right = 140.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.380392, 0.368627, 0.423529, 1 )
custom_fonts/font = SubResource( 4 )
text = "Authors"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.560784, 0.407843, 0.329412, 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Background/Exit_btn" to="." method="_on_Exit_btn_pressed"]
[connection signal="pressed" from="Background/Start_btn" to="." method="_on_Start_btn_pressed"]
[connection signal="pressed" from="Background/Author_btn" to="." method="_on_Author_btn_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
